fix homepage today heading spacing

--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -160,16 +160,6 @@
   }
 
   .dps-homepage-today {
-    h2 {
-      font-size: 24px;
-      margin-bottom: 5px;
-    }
-
-    .today-last-updated {
-      font-size: 16px;
-      color: $govuk-secondary-text-colour;
-    }
-
     .today-card-container {
       display: flex;
       flex-wrap: wrap;
